--- a/JS事件.html
+++ b/JS事件.html
@@ -10,7 +10,7 @@
  </head>
  <body>
 	<!--button 按钮-->
-	<button onclick="fun()">按钮1</button>
+	<a href="http://www.baidu.com"><button onclick="fun()">按钮1</button></a>
 	<button>按钮2</button>
 	<button>按钮3</button>
 	<button>按钮4</button>
@@ -27,6 +27,7 @@
 			//alert(e.target.innerHTML);
 			if(e.target.innerHTML == "按钮3"){
 				alert("你中奖了!");
+				location.href="http://www.baidu.com";
 			}
 			else if (e.target.innerHTML == "按钮4"){
 				alert("再接再厉!");
